Bug 278550 - Amarok only exposes low-res covers to DBus
Summary: Amarok only exposes low-res covers to DBus
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: D-Bus interfaces (other bugs)
Version First Reported In: 2.5.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 2.6
Assignee: Alex Merry
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-26 13:36 UTC by Andreas Kuhl
Modified: 2012-06-11 14:45 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kuhl 2011-07-26 13:36:46 UTC
Version:           2.4-GIT (using Devel) 
OS:                Linux

Querying DBus with "qdbus org.kde.amarok /Player GetMetadata" only gives the low-res 135x135px cover (file:///home/ademmer/.kde4/share/apps/amarok/albumcovers/cache/135@3c214fcb4727e08846956b95b93cf425) for arturl whereas the hi-res 300x300px version is also available in ( file:///home/ademmer/.kde4/share/apps/amarok/albumcovers/cache/f42e070e3d3dc0a18128670393c9bbb0).

Reproducible: Always

Steps to Reproduce:
1. Add a MP3 track to your collection
2. Let Amarok fetch the hi-res cover

Actual Results:  
lo-res cover exposed over dbus

Expected Results:  
hi-res cover exposed over dbus
Comment 1 riaasm 2011-07-31 09:36:44 UTC
This also happens to me with Amarok 2.4.3. I noticed it because the Now Rocking plasmoid shows cover in a lower resolution than what is embedded in the file and set in Amarok. This causes the cover to be distorted and hazy, as can be expected from low-res images.
Comment 2 Andreas Kuhl 2011-07-31 09:48:01 UTC
Yep, I noticed this bug first because NowRocking showed a lo-res image. I suspect the dbus behavior described above to be the root cause for this issue.
Comment 3 Myriam Schweingruber 2011-08-01 08:30:13 UTC
Setting status to confirmed.
Comment 4 riaasm 2012-04-14 11:48:20 UTC
In case it's relevant, this still occurs in 2.5.0
Comment 5 Alex Merry 2012-06-11 14:45:25 UTC
Git commit 1742ccf33267dc3e6a5722d51aeeabe4f101a377 by Alex Merry.
Committed on 11/06/2012 at 16:43.
Pushed by alexmerry into branch 'master'.

Construct the MPRIS1 arturl the same way as the MPRIS2 mpris:artUrl

Now we try to get the full size version before falling back to a reduced
version, and we encode the URL properly.
FIXED-IN: 2.6

M  +1    -0    ChangeLog
M  +11   -3    src/core/meta/support/MetaUtility.cpp

http://commits.kde.org/amarok/1742ccf33267dc3e6a5722d51aeeabe4f101a377