Construct the MPRIS1 arturl the same way as the MPRIS2 mpris:artUrl

Now we try to get the full size version before falling back to a reduced
version, and we encode the URL properly.

BUG: 278550
FIXED-IN: 2.6